--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="flex items-center justify-between">
                 <div class="left flex items-center">
                     <div class="logo">
-                        <img src="../IMAGES/logo.jpg" alt="" width="165" height="79">
+                        <img src="IMAGES/logo.jpg" alt="" width="165" height="79">
                     </div>
                     <div>
                         <a href="#home">HOME</a>
@@ -32,7 +32,7 @@
             </nav>
             <div class="me flex items-center justify-between">
                 <div class="left flex-1 justify-center">
-                    <img src="/IMAGES/PK.jpg" alt="" width="400" height="250">
+                    <img src="IMAGES/PK.jpg" alt="" width="400" height="250">
                 </div>
                 <div class="right flex-1 justify-center">
                     <h6>PRANAV KATTE</h6>
@@ -47,7 +47,7 @@
 
     <section id="about" class="about">
         <div class="container flex items-center ">
-            <div class="flex-1"><img class="about-me-img" src="/IMAGES/pk2.jpg" alt="" width="400" height="550"></div>
+            <div class="flex-1"><img class="about-me-img" src="IMAGES/pk2.jpg" alt="" width="400" height="550"></div>
             <div>
                 <h1>About <span>ME</span> </h1>
                 <H3>Hello! I'm PRANAV KATTE</H3>
@@ -84,12 +84,12 @@
             <p>We provide high standard clean websites for your perfect business solutions</p>
             <div class="wrapper">
                 <div class="card">
-                    <img src="/IMAGES/phone.png" alt="" width="100" height="100">
+                    <img src="IMAGES/phone.png" alt="" width="100" height="100">
                     <h2>Call us on</h2>
                     <h6>+91 91454 47124</h6>
                 </div>
                 <div class="card">
-                    <img src="/IMAGES/mail.png" alt="" width="100" height="100">
+                    <img src="IMAGES/mail.png" alt="" width="100" height="100">
                     <h2>Email us at</h2>
                     <h6>pranavkatte07@gmail.com</h6>
                 </div>
@@ -111,7 +111,7 @@
     </section>
     <footer>
         <div class="footer">
-            <img src="/IMAGES/logo.jpg" alt="" width="400" height="267">
+            <img src="IMAGES/logo.jpg" alt="" width="400" height="267">
         </div>
 
         </div>
