--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     sit amet consectetur adipisicing elit. Facilis, quaerat vitae. Natus quisquam impedit, suscipit vitae fugit rem perspiciatis! Obcaecati magnam molestiae minima vero unde tempora perspiciatis mollitia veritatis illo.
                 </p>
                 <div class="social">
-                    <a href="https://www.instagram.com/pranavkat_/"><img src="/IMAGES/insta.png" alt="" height="65px" width="100px"></a>
-                    <a href="https://www.linkedin.com/in/pranav-katte-137997202/" id="linkedin"><img src="/IMAGES/linked.jpg" alt="" height="65px" width="90px"></a>
+                    <a href="https://www.instagram.com/pranavkat_/"><img src="IMAGES/insta.png" alt="" height="65px" width="100px"></a>
+                    <a href="https://www.linkedin.com/in/pranav-katte-137997202/" id="linkedin"><img src="IMAGES/linked.jpg" alt="" height="65px" width="90px"></a>
                 </div>
             </div>
         </div>
