--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="flex items-center justify-between">
                 <div class="left flex items-center">
                     <div class="logo">
-                        <img src="IMAGES/logo.jpg" alt="" width="160" height="67">
+                        <img src="IMAGES/logo.jpg" style="z-index:-1" alt="" width="100" height="47">
                     </div>
                     <div>
                         <a href="#home">HOME</a>
