--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <nav class="flex items-center justify-between">
                 <div class="left flex items-center">
                     <div class="logo">
-                        <img src="IMAGES/logo.jpg" style="z-index:-1" alt="" width="100" height="47">
+                        <img src="IMAGES/logo.jpg" style="z-index:-2" alt="" width="100" height="47">
                     </div>
-                    <div>
+                    <div class="nav-bar">
                         <a href="#home">HOME</a>
                         <a href="#about">ABOUT</a>
                         <a href="#event">EVENTS</a>
