--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="flex items-center justify-between">
                 <div class="left flex items-center">
                     <div class="logo">
-                        <img src="IMAGES/logo.jpg" style="z-index:-1" alt="" width="16" height="10">
+                        <img src="IMAGES/logo.jpg"  alt="" width="2rem" height="1rem">
                     </div>
                     <div class="nav-bar">
                         <a href="#home">HOME</a>
