--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="flex items-center justify-between">
                 <div class="left flex items-center">
                     <div class="logo">
-                        <img src="IMAGES/logo.jpg"  alt="" width="4rem" height="3rem">
+                        <img src="IMAGES/logo.jpg"  alt="" width="16px" height="10px">
                     </div>
                     <div class="nav-bar">
                         <a href="#home">HOME</a>
