--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="flex items-center justify-between">
                 <div class="left flex items-center">
                     <div class="logo">
-                        <img src="IMAGES/logo.jpg"  alt="" width="165" height="79">
+                        <img src="IMAGES/logo.jpg"  alt="" width="100" height=auto>
                     </div>
                     <div class="nav-bar">
                         <a href="#home">HOME</a>
