--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header id="home">
+    <header >
         <div class="container">
             <nav class="flex items-center justify-between">
                 <div class="left flex items-center">
@@ -34,7 +34,7 @@
                 <div class="left flex-1 justify-center">
                     <img src="IMAGES/PK.jpg" alt="" width="400" height="250">
                 </div>
-                <div class="right flex-1 justify-center">
+                <div id="home" class="right flex-1 justify-center">
                     <h6>PRANAV KATTE</h6>
                     <h1>I'm a creative <span>Designer</span></h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sequi unde obcaecati eaque minima nesciunt minus natus possimus maiores numquam autem debitis dolorem, quos, accusantium deserunt dolores nemo reprehenderit voluptatibus.</p>
