--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="right">
-                    <button class="btn btn-prime">HIRE ME?</button>
+                    <button class="btn btn-prime" onclick="alert('Thanks for Hiring me!')">HIRE ME?</button>
                 </div>
             </nav>
             <div class="me flex items-center justify-between">
