--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </section>
     <section id="con" class="contact">
         <div class="container">
-            <h4><span> CONTACT ME:</span> <br> E-mail: pranavkatte07@gmail.com <br> Instagram handle: pranavkat <br> LinkedIn: Pranav Katte </h4>
+            <h4><span> CONTACT ME:</span> <br> E-mail: pranavkatte07@gmail.com <br> Instagram handle: pranavkat_ <br> LinkedIn: Pranav Katte </h4>
         </div>
     </section>
     <section id="contact" class="contactus">
